--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -2,8 +2,19 @@ spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 # Turn off the Spring Boot banner
 spring.main.banner-mode=off
 
 # Reduce logging level. Set logging level to warn
 logging.level.root=warn
+
+#add loging configs to display sql statements
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#configure jpa/hibernate to auto create the tables for me
+# the 'update' config will keep existing data in the table
+spring.jpa.hibernate.ddl-auto=update
